kubernetes/kube-prod-d1/qbittorrent/prod-d1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: qbittorrent
  name: qbittorrent
  namespace: qbittorrent
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 127.0.0.1
      containers:
        - name:  qbittorrent
          image:  lscr.io/linuxserver/qbittorrent:latest@sha256:8d48fa8c619caadfb103f04efea8747e2a2762d6c7551690919cffb987e61cee
          ports:
          - containerPort:  6881
            name: torrents
          - containerPort: 8080
            name:  qbittorrent-web
          volumeMounts:
          - name: qbittorrent-config
            mountPath: /config
          - name: downloads
            mountPath: /downloads
          - name: media-downloads
            mountPath: /data
          - name: data2
            mountPath: /data2
      volumes:
        - name: downloads
          nfs:
            server: 10.15.21.5
            path: /mnt/user/archives/websites/torrent
        - name: media-downloads
          nfs:
            server: 10.15.21.5
            path: /mnt/user/video/
        - name: data2
          nfs:
            server: 10.15.21.5
            path: /mnt/user/adult/
        - name: qbittorrent-config
          persistentVolumeClaim:
            claimName: qbittorrent-pvc
        - name: gluetun-config
          persistentVolumeClaim:
            claimName: gluetun-pvc
