kubernetes/kube-prod-d1/qbittorrent/prod-d1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-web
  namespace: qbittorrent
  labels:
    app: qbittorrent
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: qbittorrent
