kubernetes/kube-prod-d1/qbittorrent/prod-d1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-ingress
  namespace: qbittorrent
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: qbittorrent.kube-prod-d1.mclacken.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent-web
                port:
                  number: 8080
  tls:
    - hosts:
        - qbittorrent.kube-prod-d1.mclacken.net
      secretName: qbittorrent-certificate-secret
